2009-07-23  Marek Habersack  <mhabersack@novell.com>

	* ControlBuilder.cs: added an internal helper property
	IsNamingContainer.

2009-07-21  Marek Habersack  <mhabersack@novell.com>

	* SimpleWebHandlerParser.cs: make sure to ignore invalid bin/
	assemblies in AddAssembliesInBin and GetTypeFromBin.

2009-06-15  Marek Habersack  <mhabersack@novell.com>

	* TemplateParser.cs: AddAssembliesInBin (1.1 profile) tries to
	load every assembly in order to see if it's a valid one. All bad
	dll image errors are silently ignored. Fixes bug #315816

2009-06-05  Marek Habersack  <mhabersack@novell.com>

	* Page.cs: InitializeTheme uses WebConfigurationManager.GetSection
	to retrieve page theme name. GetWebApplicationSection cannot be
	used because the system.web/pages section is valid also in
	subdirectories. Fixes bug #510302

2009-06-01  Marek Habersack  <mhabersack@novell.com>

	* ClientScriptManager.cs: WriteHiddenFields doesn't add the id
	attribute to generated input element in the 1.1 profile. Fixes bug
	#508167. Patch from Hubert FONGARNAND
	<informatique.internet@fiducial.fr>, thanks!

2009-05-29  Marek Habersack  <mhabersack@novell.com>

	* StateBag.cs: made SetDirty (bool) available on 1.1 as
	internal. Fixes bug #507836

2009-05-05  Marek Habersack  <mhabersack@novell.com>

	* TemplateParser.cs: PageParserFilterType uses
	HttpApplication.LoadType so that it is able to load the filter
	from App_Code or with not fully qualified type names.

2009-05-04  Marek Habersack  <mhabersack@novell.com>

	* TemplateParser.cs: take RootBuilder from the associated
	generator. 
	Allow the main page directive to be added twice if the parser
	needs it. Used by AspGenerator when extracting the inherited type
	name before actual parsing. Fixes bug #500075

	* FileLevelControlBuilderAttribute.cs,
	FileLevelPageControlBuilder.cs, FileLevelUserControlBuilder.cs:
	implemented

	* ControlBuilder.cs: added a new internal property,
	DataBindingMethod.
	Implemented ProcessGeneratedCode.
